automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <h2>Press</h2>
       <a class="press" href="https://nmai.si.edu/home/" alt="nmai link"><img src="images/nmai-logo.png"></a>
       <a class="press" href="https://www.nytimes.com/section/t-magazine" alt="times link"><img src="images/times-logo.png"></a>
-      <a  href="https://www.sedonamonthly.com" alt="sedona link"><img src="images/sedona-logo.png"></a>
-      <a  href="https://www.bergdorfgoodman.com" alt="bergdorf link"><img src="images/bergdorf-logo.png"></a>
+      <a class="press" href="https://www.sedonamonthly.com" alt="sedona link"><img src="images/sedona-logo.png"></a>
+      <a class="press" href="https://www.bergdorfgoodman.com" alt="bergdorf link"><img src="images/bergdorf-logo.png"></a>
     </div>
     <footer>
       <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
